Fix for issue #152

--- a/Admin/Pages/Positions/Delete.cshtml
+++ b/Admin/Pages/Positions/Delete.cshtml
@@ -13,30 +13,30 @@
     <h4>JobPosition</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.JobPosition.TitleEng)
+        <dt class="col-sm-3">
+           Title English
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.JobPosition.TitleEng)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.JobPosition.TitleFre)
+        <dt class="col-sm-3">
+            Title French
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.JobPosition.TitleFre)
         </dd>
     </dl>
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.JobPosition.PositionDescEng)
+        <dt class="col-sm-3">
+           Position Description English
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.JobPosition.PositionDescEng)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.JobPosition.PositionDescFre)
+        <dt class="col-sm-3">
+            Position Description French
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.JobPosition.PositionDescFre)
         </dd>
     </dl>
