--- a/Web/Pages/Student/HighSchool/Shoreside/Computer.cshtml
+++ b/Web/Pages/Student/HighSchool/Shoreside/Computer.cshtml
@@ -60,7 +60,7 @@
                             }
                             <tr>
                                 <td>@position.LevelCode</td>
-                                <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)@space<a target="_blank" href=@pdapUrl>@pdapText</a></td>
+                                <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)@space<a target="_blank" href="@pdapUrl">@pdapText</a></td>
                                 <td><a asp-page="../../../Candidate/Shoreside/SimilarDetails" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
                             </tr>
                         }
