--- a/Web/Pages/CCGMember/Similar/SimilarList.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarList.cshtml
@@ -236,7 +236,7 @@ else{
                 {
                     <li><a href="../../Candidate/Index">@Localizer["Candidate"]</a></li>
                     <li><a href="../../Candidate/Shoreside/AllCandidateShoreside">@Localizer["Shoreside"]</a></li>
-                    <li><a asp-page="../../Candidate/Shoreside/SimilarList" asp-route-id="@Model.Id">@Localizer["Position List"]</a></li>
+                    <li><a asp-page="../../Candidate/Shoreside/SimilarList" asp-route-id="@Model.CurrentPosition.JobGroupId">@Localizer["Position List"]</a></li>
                     <li><a asp-page="@Model.PreviousPageDetails" asp-all-route-data="routedata">@Localizer["Current Position"]</a></li>
                     <li><a asp-page="@Model.PreviousPageDetails" asp-all-route-data="routedataprevious">@Localizer["Similar Search"]</a></li>
                 }
