Fix for Students broken link

--- a/Web/Pages/Student/Index.cshtml
+++ b/Web/Pages/Student/Index.cshtml
@@ -13,7 +13,7 @@
             <div class="row">
                 <ol class="breadcrumb">
                     <li><a href="../../Index">@Localizer["Home"]</a></li>
-                    <li><a href="../Index">@Localizer["Student"]</a></li>
+                    <li>@Localizer["Student"]</li>
                 </ol>
             </div>
         </nav>
@@ -30,7 +30,7 @@
                 <a class="nav-link" asp-page="HighSchool/Index">
                     <img src="~/img/Student/Highschool.jpg" alt="@Localizer["PhotoHS"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                 </a>
-                <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="HighSchool/AllPositions">@Localizer["HighSchool"]</a></h4></figcaption>
+                <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="HighSchool/Index">@Localizer["HighSchool"]</a></h4></figcaption>
             </figure>
         </div>
         <div class="col-sm-4">
@@ -46,7 +46,7 @@
                 <a class="nav-link" asp-page="University/Index">
                     <img src="~/img/Student/University.jpg" alt="@Localizer["PhotoU"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                 </a>
-                <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="University/AllPositions">@Localizer["University"]</a></h4></figcaption>
+                <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="University/Index">@Localizer["University"]</a></h4></figcaption>
             </figure>
         </div>
     </section>
